# SignRiver-DLC-Hub

./: .gitignore  README.md  launcher.py  publisher.py  pyproject.toml
.pytest-tmp-agent-queue-review-20260713/test_queue_runs_and_persists_t0/: hub.db
config/: announcement.json  publisher.example.json  update.json
docs/: application-implementation-plan.md  dlc-catalog.schema.json  publisher-guide.md  update-architecture.md
tests/: conftest.py  test_announcement_service.py  test_cache_maintenance.py  test_cartridge_catalog.py  test_catalog_generator.py  test_catalog_manifest.py  test_cleanup_legacy_test_cache_script.py  test_diagnostics.py  test_dlc_catalog.py  test_dlc_freshness.py  test_download_manager.py  test_download_persistence.py  test_download_queue.py  test_game_adapters.py  test_game_discovery.py  test_install_engine.py  test_install_receipt_persistence.py  test_install_service.py  test_loader.py  test_log_reader.py  test_multi_game_cartridges.py  test_net_errors.py  test_original_restore.py  test_patch_engine.py  test_persistence.py  test_product_packaging.py  test_publisher_acceptance.py  test_publisher_main.py  test_publisher_ui_threading.py  test_publisher_workspace.py  test_release_build.py  test_release_sources.py  test_speed_test.py  test_state.py  test_stellaris_adapter.py  test_ui_theme.py  test_updater.py  test_user_settings.py  test_versioning.py
tools/: __init__.py  build_module.py  build_publisher.py  build_release.py  cleanup_legacy_test_cache.ps1  generate_app_icon.py  generate_dlc_catalog.py  sfx_stub.py
update/: manifest.example.json
(+2242 files in other folders)
