[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "signriver-dlc-hub"
version = "0.1.0"
description = "A modular desktop DLC manager for multiple games"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2,<6",
    "Pillow>=10,<13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pyinstaller>=6,<7",
]

[project.scripts]
signriver-dlc-hub = "signriver_launcher.main:main"
signriver-publisher = "signriver_publisher.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.test-artifacts/pytest-tmp"
cache_dir = ".test-artifacts/pytest-cache"

[tool.ruff]
cache-dir = ".test-artifacts/ruff-cache"
